--- a/test/fixtures/games.yml
+++ b/test/fixtures/games.yml
@@ -1,7 +1,11 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
+  id: 1
   max_balls: 1
+  bingo_session_id: 1
 
 two:
+  id: 2
   max_balls: 1
+  bingo_session_id: 2
